--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-      <a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/341l9qyug91enon/manifest.plist">앱 설치하기</a>
+      <a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/341l9qyug91enon/manifest.plist">앱 설치하기(4.12)</a>
     </div>
 </body>
 </html>
